# policy-analysis-tool

./: .dockerignore  .firebaserc  .gitignore  LICENSE  README.md  docker-compose.yml  documentation.md  fly.toml  index.html  metadata.json  methodology_documentation.md  nginx.conf  package-lock.json  pyproject.toml
.claude/: settings.json
.github/workflows/: backend-ci.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  fly.toml  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  db.py  deps.py  security.py  utils.py
backend/app/data/: ministries_seed.json  source_urls.json  state_gazetteer.json
backend/app/models/: admin_user.py  issue.py  ministry.py  pillar.py  policy_item.py
backend/app/routers/: admin.py  admin_uploads.py  auth.py  compare.py  (+9 more)
backend/tests/: conftest.py  test_admin.py  test_admin_sync.py  test_compare.py  test_items.py  test_ministry_resolver.py  test_policy_evolution.py  test_report_chunker.py  test_source_link_matcher.py  test_source_resolver.py  test_stats.py  test_uploads.py
frontend/: .dockerignore  Dockerfile.frontend  Dockerfile.frontend.prod  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css
src/: App.tsx  api.ts  constants.ts  data.ts  index.css  types.ts
src/components/: AnalyticalBrief.tsx  Compare.tsx  DownloadPdfButton.tsx  Drafts.tsx  IndiaMapPaths.ts  IntelligenceOverview.tsx  ItemDetail.tsx  Login.tsx  Masthead.tsx  Ministries.tsx  Overview.tsx  Reports.tsx  UpdateRecordButton.tsx  Upload.tsx
src/hooks/: useTrackingPeriodFilter.ts
(+93 files in other folders)
