[project]
name = "igw-backend"
version = "0.1.0"
description = "India Governance Watch — FastAPI + MongoDB backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "gunicorn==23.0.0",
    "motor==3.6.0",
    "pymongo==4.9.2",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "python-multipart==0.0.20",
    "rapidfuzz==3.11.0",
    "pymupdf==1.25.1",
    "pdfplumber==0.11.4",
    "python-docx==1.1.2",
    "httpx==0.28.1",
    "google-genai==0.3.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-cov==6.0.0",
    "mongomock-motor==0.0.34",
]

[tool.uv]
package = false
